@@ -1,5 +1,6 @@
 package edu.grinnell.csc207.soundsofsorting.sortevents;
 
+import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -22,7 +23,7 @@ public class CopyEvent<T> implements SortEvent<T> {
 
     @Override
     public List<Integer> getAffectedIndices() {
-        return List.of(destination);
+        return Arrays.asList(destination);
     }
 
     @Override
